--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Latihan Git</title>
 </head>
 <body>
+    <header>ini adalah header</header>
+
     <h1>PT SUKSES SEJAHTERA</h1>
 
     <DIv>Jalan menuju kesuksesan bersama</DIv>
+    <footer>ini adalah footer</footer>
 </body>
 </html>
