membuat perubahan  dibaris 16 halaman contact us

--- a/contact-us.html
+++ b/contact-us.html
@@ -6,11 +6,15 @@
     <title>Latihan Git</title>
 </head>
 <body>
+
     <header>ini adalah header</header>
 
     <h1>PT SUKSES SEJAHTERA</h1>
 
     <DIv>ini adalah halaman Contact form dan maps</DIv>
+
+    <DIv>contoh perubahan baris 16</DIv>
+    
     <footer>ini adalah footer</footer>
 </body>
 </html>
